// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Block Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzomME XTgWp"
>
  <li
    className="sc-fzqAbL kuOMri"
    onClick={[Function]}
  >
    <span
      className="sc-fzpkJw dSqZJS"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqAbL kuOMri"
    onClick={[Function]}
  >
    <span
      className="sc-fzpkJw dSqZJS"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqAbL kuOMri"
    onClick={[Function]}
  >
    <span
      className="sc-fzpkJw dSqZJS"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;

exports[`Inline Menu & Menu Items renders correctly 1`] = `
<ul
  className="sc-fzomME XTgWp"
>
  <li
    className="sc-fzqAbL hjwXii"
    onClick={[Function]}
  >
    <span
      className="sc-fzpkJw dSqZJS"
      size={4}
    >
       Item 1 
    </span>
  </li>
  <li
    className="sc-fzqAbL hjwXii"
    onClick={[Function]}
  >
    <span
      className="sc-fzpkJw dSqZJS"
      size={4}
    >
       Item 2 
    </span>
  </li>
  <li
    className="sc-fzqAbL hjwXii"
    onClick={[Function]}
  >
    <span
      className="sc-fzpkJw dSqZJS"
      size={4}
    >
       Item 3 
    </span>
  </li>
</ul>
`;
